<resources>
    <string name="app_name" translatable="true">HomeAssistantLauncher</string>
    <string name="settings" translatable="true">Settings</string>
    <string name="apps" translatable="true">Apps</string>
    <string name="save" translatable="true">Save</string>
    <string name="clear_cookies" translatable="true">Clear Cookies</string>
    <string name="url_hint" translatable="true">Enter a URL per Line (e.g., https://demo.home-assistant.io)</string>
    <string name="switch_to_main_delay" translatable="true">Switch to Main Page Delay</string>
    <string name="switch_delay" translatable="true">Switch Delay</string>"
    <string name="urls_saved_successfully" translatable="true">URL saved successfully</string>
    <string name="error_saving_url" translatable="true">Error saving URL</string>
    <string name="error_clearing_cookies" translatable="true">Error clearing cookies</string>"
    <string name="settings_saved_successfully" translatable="true">Settings saved successfully</string>
    <string name="error_saving_settings" translatable="true">Error saving settings</string>
    <string name="invalid_urls_on_lines" translatable="true">Invalid URLs on lines</string>
    <string name="cookies_cleared_successfully" translatable="true">Cookies cleared successfully</string>
    <string name="error_restarting_app" translatable="true">Error restarting app</string>
    <string name="launch_error" translatable="true">Failed to launch app</string>
    <string name="uninstall_error" translatable="true">Failed to uninstall app</string>
    <string name="permission_denied" translatable="true">Permission denied</string>
    <string name="app_icon" translatable="true">app_icon</string>
    <string name="uninstall_icon" translatable="true">uninstall_icon</string>
    <string name="add_new_url" translatable="true">Add New URL</string>
    <string name="remove_url" translatable="true">Remove URL</string>"
    <string name="rapid_crash_message" translatable="true">App is closing due to repeated errors.</string>
    <string name="duplicate_urls_found" translatable="true">Duplicate URLs found. Please remove duplicates and try again.</string>

    <string-array name="switch_delay_entries">
        <item>Never</item>
        <item>30 seconds</item>
        <item>1 minute</item>
        <item>2 minutes</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>24 hours</item>
    </string-array>

    <integer-array name="switch_delay_values">
        <item>0</item>
        <item>30</item>
        <item>60</item>
        <item>120</item>
        <item>300</item>
        <item>600</item>
        <item>1800</item>
        <item>3600</item>
        <item>10800</item>
        <item>86400</item>
    </integer-array>
</resources>